Scroll issues
Now the overflow-y: scroll isn’t quite right. If the <ul> of the
navigation is exactly where it should be, overlapping with the left
border nav handle perfectly, the scroll bumps way over to the left, off
the navigation.

--- a/bioone-draftcode/stylesheets/sass/bioone.scss
+++ b/bioone-draftcode/stylesheets/sass/bioone.scss
@@ -345,6 +345,34 @@ hr {
     background-repeat: no-repeat; 
     border-bottom: 15px solid $color-brand; 
 
+    @include media-query(max, medium) {
+        font-size: 10px;
+        padding: 25px 0 0 25px; 
+    }
+    
+    @include media-query(max, small) {
+        background-image: none; 
+        height: 75px; 
+        border-bottom: $color-brand solid 2px;
+        padding: 25px 75px 0 25px; 
+        font-size: 10px; 
+    }
+    
+    img {
+        width: 130px; 
+        float: left; 
+        
+        @include media-query(max, medium) {
+            width: 110px; 
+            padding-top: 2px; 
+        }
+    
+        @include media-query(max, small) {
+            width: 110px; 
+            padding-top: 0;  
+        }
+    }
+    
     .hero-text-container {
         max-width: 900px; 
         margin: {
@@ -376,34 +404,6 @@ hr {
             text-transform: none; 
             letter-spacing: 0;
             color: $white;
-        }
-    }
-
-    @include media-query(max, medium) {
-        font-size: 10px;
-        padding: 25px 0 0 25px; 
-    }
-    
-    @include media-query(max, small) {
-        background-image: none; 
-        height: 75px; 
-        border-bottom: $color-brand solid 2px;
-        padding: 25px 75px 0 25px; 
-        font-size: 10px; 
-    }
-    
-    img {
-        width: 130px; 
-        float: left; 
-        
-        @include media-query(max, medium) {
-            width: 110px; 
-            padding-top: 2px; 
-        }
-    
-        @include media-query(max, small) {
-            width: 110px; 
-            padding-top: 0;  
         }
     }
 }
@@ -501,7 +501,7 @@ nav {
             }    
 
             &.open {
-                right: calc(265px + 80px - 4px);
+                right: calc(253px + 80px - 3px);
             }
         }
 
